--- a/AndBible/res/values-tr/strings.xml
+++ b/AndBible/res/values-tr/strings.xml
@@ -11,9 +11,21 @@
 	<!-- Startup & Help -->
     <string name="splash_top_text">"\n\'Tanrı, \"Işık olsun\" diye buyurdu ve ışık oldu.\'\nYaratılış 1:3"</string>
     <string name="help_text">Etkinlikler için Menü düğmeyi basın\n\nSonraki veya önceki bölüme gitmek için ekranda parmağınız kaydırın.</string>
-    <string name="help_text_long">"<b>Navigation</b>\nGo to the next or previous chapter by using the track-ball, D-pad or swiping the screen with your finger \nDouble-tap toggles Fullscreen on/off. \n\n<b>Menu</b> \nPress the MENU key for actions \n\nTo download more documents press Menu/More/Download Documents \n\n<b>Speech</b>\nPress Speak to access a dialog to start or stop reading \n\n<b>Bookmarks</b>\nBookmarks can be added via the verse context menu. The Bookmark Manager is accessed via the main menu. The Bookmark Manager context menu allows bookmarks to be grouped using labels. \n\n<b>Search</b>\nSearch text can include special characters like *, ?, AND, OR, NOT (see \"Apache Lucene - Query Parser Syntax\" for more details) \n\n<b>Context Menus</b> \nLong press on the bible view to open the context menu for actions affecting the current verse. \nLong press on a document in the document selector to delete it or view information. \nLong press the Back button to access the History list "</string>
+    <string name="help_text_long"><b>Navigasyon</b>\nÖnceki veya sonraki bölüme geçmek için iztopu veya yön tuşları bas veya parmağınızla ekranı kaydırın
+    \nÇıft dökünmak Tamekran modu açıp kapatır.
+    \n\n<b>Menü</b>
+    \nKomutlar içın MENÜ tuşunu basın.
+	\n\nDaha fazla belgeyi indirmek için Menü/Daha Fazla/Belgeler İndir\'i basın
+    \n\n<b>Söyle</b>\nSelsi okumasını başlayıp durduran diyalogu görmek için Söyle\'i bas
+    \n\n<b>Notlarıme</b>\nAyet içerik menüsüde bulunan Notlarım komutun aracılığıyla notları ekleyenebilir. Var olan notları ana menüsünden erişilebilir.
+    \n\n<b>Yerimi</b>\nYerimileri, ayet içerik menüsünden eklenebilir. Yerimi yöneticisi ana menüsünden erişilebilir. Yerimi yöneticisi içerik menüsünü kullanarak yerimileri, ekiketlere göre sıralayabilir.
+    \n\n<b>Arama</b>\nArama sorgular *, ?, AND, OR, NOT gibi özel karakterler içerebilir.  (daha fazla bilgi için "Apache Lucene - Query Parser Syntax" okuyun)
+    \n\n<b>İçerik Menüleri</b>
+    \nGeçerli ayeti etkilenen komutlar için Kitsal Kitap okuma sayfanın üzerinde uzun süreli basarak içerik menüsünü açın.
+    \nSilmek veya bilgisini görmek için belge menüsüde belgenin üzerinde uzun süreli basın.
+    \nGeçmiş Listesi için Geri tuşu uzun süreli basın</string>
     <string name="version_text">Sürüm %s</string>
-	<string name="no_sdcard_error">Please insert an SD card and start And Bible again.</string>
+	<string name="no_sdcard_error">Lütfen SD kartı takın ve And Bible yeniden başlatın.</string>
     
     <!-- main menu -->
     <string name="chooseBook">Belge</string>
@@ -31,7 +43,7 @@
 
 	<!--  Search -->
     <string name="search_index">Arama İndeksi</string>
-    <string name="index_creation_required">"An index is required to search.\n\nIndexes may be downloaded from the internet or created locally.\n\nDownloading is much quicker and downloaded indexes have more search features.\n\nAn internet connection is required to download indexes.\n"</string>
+    <string name="index_creation_required">"Aramak için indeks gerekiyor.\n\nİndeksler internetten indirebilir veya cihazda oluşturabilir.\n\nİndirmek çok daha hızlı ve indirilen indexlerin arama funksiyonları daha fazla.\n\nİndexleri indirmek için internet bağlantısı gerekli.\n"</string>
     <string name="indexing_wait_msg">İndeks yaratıldıktan sonra arama sayfasına götürülürsün.</string>
     <string name="index">İndeks</string>
     <string name="index_download">İndir</string>
@@ -39,9 +51,9 @@
     <string name="index_create">Yarat</string>
 
 	<!-- Tasks -->
-    <string name="progress_status">Progress</string>
-    <string name="task_kill_warning">These long running tasks may terminate if you switch to another application before they finish.</string>
-    <string name="no_tasks_running">There are no tasks currently being executed.</string>
+    <string name="progress_status">Gelişim</string>
+    <string name="task_kill_warning">Bu uzun zaman süren görevler tamamlanmadan başka uygulamaya geçersen, işleri sonlandırabilir.</string>
+    <string name="no_tasks_running">Şu an çalışan görev bulunmuyor.</string>
 
     <!-- Search -->
     <string name="search_words_group_prompt">Ayette ara</string>
@@ -77,7 +89,7 @@
     <string name="prefs_navigate_to_verse_title">Ayete Yönlendir</string>
     <string name="prefs_navigate_to_verse_summary">Pasaj seçerken bölümle birlikte ayet seçilebilir</string>
     <string name="prefs_text_size_title">Metin büyüklüğü</string>
-    <string name="prefs_text_size_summary"></string>
+    <string name="prefs_text_size_summary">See more or see more clearly</string>
     <string name="prefs_interface_locale_title">Uygulama dili</string>
     <string name="prefs_interface_locale_summary">Başka arayüzey dili seç</string>
     <string name="locale_change_warning">Yeni dilin kullanması için bu uygulama şimdi yeniden başlatılır</string>
@@ -175,7 +187,7 @@
 	
     <!-- General -->
     <string name="error_occurred">Bir hata oldu</string>
-    <string name="okay">OK</string>
+    <string name="okay">Tamam</string>
     <string name="cancel">İptal</string>
     <string name="no">Hayır</string>
     <string name="error">"Hata "</string>
@@ -183,4 +195,18 @@
     <string name="retry">Tekrar Deneyin</string>
     <string name="please_wait">Lütfen bekleyin...</string>
     <string name="all">Hepsi</string>
-<string name="select_text">Metni seç</string><string name="select_text_help">Seçmek için yavaşça sürükleyin.\nSeçtikten sonra kopyalamak için ona dokun.</string><string name="error_no_content">Seçildiğin ayeti içeriği yok</string><string name="mynote">Notlarım</string><string name="mynote_add">Notlarıma ekle</string><string name="mynote_saved">Notlarım kaydedildi</string><string name="mynote_view_edit">Notlarım</string><string name="mynotes">Notlarım</string><string name="prefs_show_mynotes_summary">Bir ayetin notları varsa metinde bir ikon gösterilir</string><string name="prefs_show_mynotes_title">Not ikonları metinde</string><string name="save">Kaydet</string><string name="search_results">Sonuçlar</string><string name="error_key_not_in_document">Belgede bulunmadı</string><string name="error_page_too_large">Yüklenmesi için bu sayf</string></resources>
+	<string name="select_text">Metni seç</string>
+	<string name="select_text_help">Seçmek için yavaşça sürükleyin.\nSeçtikten sonra kopyalamak için ona dokun.</string>
+	<string name="error_no_content">Seçildiğin ayeti içeriği yok</string>
+	<string name="mynote">Notlarım</string>
+	<string name="mynote_add">Notlarıma ekle</string>
+	<string name="mynote_saved">Notlarım kaydedildi</string>
+	<string name="mynote_view_edit">Notlarım</string>
+	<string name="mynotes">Notlarım</string>
+	<string name="prefs_show_mynotes_summary">Bir ayetin notları varsa metinde bir ikon gösterilir</string>
+	<string name="prefs_show_mynotes_title">Not ikonları metinde</string>
+	<string name="save">Kaydet</string>
+	<string name="search_results">Sonuçlar</string>
+	<string name="error_key_not_in_document">Belgede bulunmadı</string>
+	<string name="error_page_too_large">Yüklenmesi için bu sayf</string>
+</resources>
