--- a/AndBible/res/values-fi/strings.xml
+++ b/AndBible/res/values-fi/strings.xml
@@ -72,7 +72,7 @@
   <string name="download_document_confirm_prefix">"Lataa "</string>
   <string name="error_downloading">Virhe ladattaessa teosta. Ole hyvä ja tarkista yhteyden toimivuus.</string>
   <string name="no_internet_connection">Ei saada yhteyttä internettiin</string>
-  <string name="storage_space_warning">Liian vähän tilaa teoksen tallentamiseksi.</string>
+  <string name="storage_space_warning">Liian vähän tallennustilaa teoksen tallentamiseen.</string>
   <string name="wait_for_bible">Ole hyvä ja odota, että teos on ladattu kokonaan. Latauksen jälkeen ohjelma siirtyy takaisin tekstinäkymään.</string>
   <string name="wait_for_bible_not_yet">Ole hyvä ja odota hetki. Teoksen asennus ei ole vielä valmis.</string>
   <string name="download_complete_no_bibles">Teosta ei onnistuttu asennetamaan. Siirry takaisin ja yritä uudelleen.</string>
@@ -108,7 +108,7 @@
   <string name="retry">Yritä uudelleen</string>
   <string name="please_wait">Odota hetki...</string>
   <string name="all">Kaikki</string>
-  <string name="tts_lang_not_available">Kieli ei ole käytettävissä.</string>
+  <string name="tts_lang_not_available">Tätä kieltä ei voi käyttää.</string>
   <string name="all_greek_occurrences">Etsi kaikki esiintymät</string>
   <string name="all_hebrew_occurrences">Etsi kaikki esiintymät</string>
   <string name="doc_type_book">Kirja</string>
@@ -122,7 +122,7 @@
   <string name="prefs_interface_locale_title">Sovelluksen kieli</string>
   <string name="prefs_verse_per_line_summary">Näytä kukin jae omalla rivillään</string>
   <string name="prefs_verse_per_line_title">Jokainen jae omalla rivillään</string>
-  <string name="refresh_book_list">Päivitä luettelo ladattavista teoksista?</string>
+  <string name="refresh_book_list">Päivitä luettelo saatavilla olevista teoksista</string>
   <string name="rest_of_book">Kirjan loppuun</string>
   <string name="rest_of_chapter">Luvun loppuun</string>
   <string name="share_verse">Jaa aktiivinen jae ...</string>
@@ -148,4 +148,4 @@
   <string name="prefs_section_title_title">Väliotsikot</string>
   <string name="strongs_toggle_button_off">nnnn</string>
   <string name="strongs_toggle_button_on">nnnn</string>
-<string name="speak_queue">Jono</string><string name="speak_repeat">Toista</string><string name="select_text">Valitse teksti</string><string name="select_text_help">Valitse teksti maalaamalle se hitaasti.\nKopioidaksesi tekstin, kosketa valintaa maalaamisen jälkeen.</string><string name="error_no_content">Ei sisältöä valitulle jakeelle</string><string name="mynote">Oma kommentti</string><string name="mynote_add">Lisää oma kommentti</string><string name="mynote_saved">Oma kommentti tallennettiin</string><string name="mynote_view_edit">Oma kommentti</string><string name="mynotes">Omat kommentit</string><string name="prefs_show_mynotes_summary">Näytä tekstissä kuvake ja kommentti</string><string name="prefs_show_mynotes_title">Näytä oman kommentin kuvake</string><string name="save">Tallenna</string><string name="search_results">Hakutulokset</string><string name="error_key_not_in_document">Ei löytynyt teoksesta</string><string name="error_page_too_large">Sivu on liian suuri ladattavaksi</string><string name="prefs_text_size_sample_text">Sample text</string></resources>
+<string name="speak_queue">Jono</string><string name="speak_repeat">Toista</string><string name="select_text">Valitse teksti</string><string name="select_text_help">Valitse teksti maalaamalle se hitaasti.\nKopioidaksesi tekstin, kosketa valintaa maalaamisen jälkeen.</string><string name="error_no_content">Ei sisältöä valitulle jakeelle</string><string name="mynote">Oma kommentti</string><string name="mynote_add">Lisää oma kommentti</string><string name="mynote_saved">Oma kommentti tallennettiin</string><string name="mynote_view_edit">Oma kommentti</string><string name="mynotes">Omat kommentit</string><string name="prefs_show_mynotes_summary">Näytä tekstissä kuvake ja kommentti</string><string name="prefs_show_mynotes_title">Näytä oman kommentin kuvake</string><string name="save">Tallenna</string><string name="search_results">Hakutulokset</string><string name="error_key_not_in_document">Ei löytynyt teoksesta</string><string name="error_page_too_large">Sivu on liian suuri ladattavaksi</string><string name="prefs_text_size_sample_text">Esimerkkiteksti</string></resources>
