--- a/AndBible/res/values-nb/strings.xml
+++ b/AndBible/res/values-nb/strings.xml
@@ -1,111 +1,160 @@
-<?xml version="1.0" encoding="utf-8"?>
-
+﻿<?xml version="1.0" encoding="utf-8"?>
 <resources>
-
-    <string name="splash_top_text">\n\"Da sa Gud, \'Bli lys!\' Og det ble lys.\"\n1. Mosebok 1:3</string>
-    <string name="help_text">Velkommen\nBok navigering\nBla:\nFør fingeren til venstre for å se neste kapittel.\nFør fingeren til høyre for å gå tilbake et kapittel\nEller rull track-ballen til siden for å gå fram og tilbake et kapittel.</string>
-    <string name="help_text_long">Navigering\nGå til neste eller forrige kapittel ved å benytte track-ball, navigasjonstaster eller ved å føre fingeren over skjemen.\n\nTrykk meny tasten for diverse gjøremål\n\nHøytlesing\nTrykk tale for å få lest opp foreliggende vers.\nTrykk Høytlesing en gang til for å stoppe opplesingen\n\nTrykk lenge på skjermen for å kopiere bibelverset til utklippstavlen\nTrykk lenge på et dokument i dokumentvelgeren for å slette eller se egenskapene til dokumentet.</string>
-    <string name="no_sdcard_error">Sett inn ett sd-kort, og start And Bible på nytt.</string>
-    <string name="version_text">Versjon %s</string>
-    <!-- main menu -->
-    <string name="chooseBook">Dokument</string>
-    <string name="selectPassage">Avsnitt</string>
-    <string name="search">Finn</string>
-    <string name="settings">Innstillinger</string>
-    <string name="history">Historikk</string>
-    <string name="speak">Høytlesing</string>    
-
-    <string name="choosePassageBookName">Velg bok</string>
-    <string name="choosePassageChapterName">Velg kapittel</string>
-
-    <string name="search_index">Lag søkeregister</string>
-    <string name="search_chinese_na">Søking i kinesise dokumenter er planlagt i en fremtidig utgave.</string>
-    <string name="index_creation_required">For å søke trengs et søkeregister. \n\nSøkeregisterne kan lastes ned fra internett eller bygges lokalt. \n\n Nedlasting av register er raskere og de gir ofte bedre søk.\n\nEn internett forbindelse er nødvendig for å laste ned søkeregister.</string>
-    <string name="indexing_wait_msg">Når indekseringen er utført vil du bli tatt med til søkeskjermen</string>
-    <string name="index">Lag søkeregister</string>
-    <string name="index_download">Last ned</string>
-    <string name="index_not_available_for_download">Dette registeret er ikke tilgjengelig for nedlasting</string>
-    <string name="index_create">Bygg lokalt</string>
-    <string name="sdcard_error">Beklager, du mangler et sd-kort!</string>
-    <string name="directory_error">Beklager, ingen tilgang til katalogen %s</string> 
-    <string name="progress_status">Fremdrift</string>
-    <string name="task_kill_warning">Var klar over at Android kan avlutte disse tidkrevende jobbende hvis du skifter til en anne applikasjon før jobben er utført.</string>
-	<string name="no_tasks_running">Det er for tiden ingen jobber som utføres</string>
-    <string name="delete_doc">Slett %s?</string>
-
-<!-- Search -->
-    <string name="search_words_group_prompt">Fin søkeord</string>
-    <string name="search_all_words">Alle ordene</string>
-    <string name="search_any_word">Ethvert ord</string>
-    <string name="search_phrase">Frase</string>
-    <string name="search_result_count">%d treff funnet</string>
-    <string name="search_showing_first">For mange treff. Viser de  %d</string> 
-    <string name="search_bible_section_group_prompt">Søk avgrensinger</string>
-    <string name="search_all_bible">Hele bibelen</string>
-    <string name="search_new_testament">Det nye testamentet</string>
-    <string name="search_old_testament">Det gamle testamentet</string>
-    <string name="search_current_book">Gjeldene bok</string>
-    <string name="error_executing_search">Feil med søk</string>
-
-	<!-- Preferences -->
-    <string name="prefs_show_verseno_title">Versnummer</string>
-    <string name="prefs_show_verseno_summary">Vis versnummer</string>
-    <string name="prefs_show_notes_title">Notater</string>
-    <string name="prefs_show_notes_summary">Vis notater</string>
-    <string name="prefs_show_strongs_title">Vis Strong\'s ordbokstall</string>
-    <string name="prefs_show_strongs_summary">Peker til Gresk &amp; Hebraiske ordboksforklaringer</string>
-    <string name="prefs_night_mode_title">Nattmodus</string>
-    <string name="prefs_night_mode_summary">For enklere lesing i mørke</string>
-    <string name="prefs_text_size_title">Skriftstørrelse</string>
-    <string name="prefs_text_size_summary">Se mer eller se klarere</string>
-
-	<!-- Notes screen -->
-    <string name="no_chapter_notes">Ingen notater eksisterer til dette kapitelet.</string>
-    <string name="no_verse_notes">Ingen notat til dette verset</string>
-    <string name="previous">Tilbake</string>
-    <string name="next">Fram</string>
-
-	<!--  Strongs -->
-    <string name="strongs">Strong\'s ordbok</string>
-    <string name="strongs_not_installed">Vær sp snill å last ned Strong\'s hebraiske og greske ordbøker</string>
-
-	<!-- Module download -->
-    <string name="download">Last ned bibler</string>
-    <string name="download_confirmation">Vil du laste ned bibler fra internett?</string>
-    <string name="download_source_message">Dokumenter blir lastet ned fra \nhttp://www.crosswire.org</string>
-    <string name="download_document_confirm_prefix">"Last ned"</string>
-    <string name="error_downloading">En feil oppstod ved nedlasting. Sjekk din Internett forbindelse.</string>
-    <string name="no_internet_connection">Kunne ikke koble til Internett</string>
-    <string name="wait_for_bible">Venligst vent på at modulen skal bli lastet ned. Du vil så bli tatt til hovedskjermen.</string>
-	<string name="wait_for_bible_not_yet">Vennligs vent. Modulen er ikke ferdig innstalert ennå.</string>
-    <string name="download_complete_no_bibles">Ingen bibler ble instalert.  Trykk tilbake og prøv igjen</string>
-	<string name="too_many_jobs">For mange jobber utføres. Vennligst vent på at noen skal fullføres og prøv igjen!</string>
-
-	<!-- Context menus -->
-    <string name="delete">Slette</string>
-    <string name="about">Om</string>
-    <string name="notes">Notater og kryssreferanser</string>
-    <string name="copy">Kopiere dette verset</string>
-    <string name="send_sms">Send verset med SMS</string>
-
-	<!-- Dictionary -->
-    <string name="dictionary">Ordbok</string>
-    <string name="search_dictionary_hint">Søk i ordbok</string>
-    <string name="dictionary_contents">Innhold</string>
-
-	<!-- Document types -->    
-	<string name="doc_type_bible">Bibel</string>
-	<string name="doc_type_commentary">Kommentar</string>
-	<string name="doc_type_dictionary">Ordbok</string>
-
-    <string name="error_occurred">En feil har opstått</string>
-    <string name="okay">OK</string>
-    <string name="cancel">Avbryt</string>
-    <string name="error">Feil </string>
-    <string name="more">Mere</string>
-    <string name="retry">Prøv igjen</string>
-    <string name="please_wait">Vennligst vent...</string>
-    
-    <string name="tts_lang_not_available">Språk ikke tilgjengelig</string>
-
+  <string name="splash_top_text">"\n\"Da sa Gud, \'Bli lys!\' Og det ble lys.\"\n1. Mosebok 1, 3"</string>
+  <string name="help_text">Trykk meny-knappen for menyvalg.\n\nNavigering:\nFør fingeren til venstre for å se neste kapittel.\nFør fingeren til høyre for å gå tilbake ett kapittel.\nRull track-ballen til siden for å gå fram og tilbake ett kapittel.</string>
+  <string name="help_text_long"><b>Navigering</b>\nGå til neste eller forrige kapittel ved å benytte track-ball, navigasjonstaster eller ved å dra fingeren vannrett over skjermen.\nDobbeltrykk på skjermen slår av/på fullskjermmodus.\n\n<b>Meny</b>\nTrykk menyknappen for diverse gjøremål\n\nFor å laste ned flere moduler, trykk menyknappen-&gt;Mer-&gt;Last ned bibler\n\n<b>Høytlesing</b>\nTrykk lenge i bibelvisningen for å åpne menyen for gjeldende vers.\nTrykk lenge på en modul i modullisten for å slette den eller vise informasjon om den.\nTrykk lenge på tilbakeknappen for å vise historikken.</string>
+  <string name="no_sdcard_error">Sett inn ett SD-kort og start And Bible på nytt.</string>
+  <string name="version_text">Versjon %s</string>
+  <!-- main menu -->
+  <string name="chooseBook">Dokument</string>
+  <string name="selectPassage">Avsnitt</string>
+  <string name="search">Finn</string>
+  <string name="settings">Innstillinger</string>
+  <string name="history">Historikk</string>
+  <string name="speak">Høytlesing</string>
+  <string name="choosePassageBookName">Velg bok</string>
+  <string name="choosePassageChapterName">Velg kapittel</string>
+  <string name="search_index">Lag søkeregister</string>
+  <string name="index_creation_required">For å søke trengs et søkeregister.\n\nSøkeregistrene kan lastes ned fra internett eller bygges lokalt.\n\nNedlasting er raskere og de gir ofte bedre søkemuligheter.\n\nEn internettforbindelse er nødvendig for å laste ned søkeregister.</string>
+  <string name="indexing_wait_msg">Når indekseringen er utført vil du bli tatt til søkeskjermen.</string>
+  <string name="index">Lag søkeregister</string>
+  <string name="index_download">Last ned</string>
+  <string name="index_not_available_for_download">Dette registeret er ikke tilgjengelig for nedlasting</string>
+  <string name="index_create">Bygg lokalt</string>
+  <string name="progress_status">Fremdrift</string>
+  <string name="task_kill_warning">Var klar over at Android kan avlutte disse tidkrevende jobbende hvis du skifter til en annen applikasjon før jobben er utført.</string>
+  <string name="no_tasks_running">Det er for tiden ingen jobber som utføres.</string>
+  <string name="delete_doc">Slett %s?</string>
+  <!-- Search -->
+  <string name="search_words_group_prompt">Type søk:</string>
+  <string name="search_all_words">Alle ordene</string>
+  <string name="search_any_word">Noen av ordene</string>
+  <string name="search_phrase">Frase</string>
+  <string name="search_result_count">%d treff funnet</string>
+  <string name="search_showing_first">For mange treff. Viser de første %d</string>
+  <string name="search_bible_section_group_prompt">Søkeområde:</string>
+  <string name="search_all_bible">Hele bibelen</string>
+  <string name="search_new_testament">Det nye testamentet</string>
+  <string name="search_old_testament">Det gamle testamentet</string>
+  <string name="search_current_book">Gjeldene bok</string>
+  <string name="error_executing_search">Feil ved søk</string>
+  <!-- Preferences -->
+  <string name="prefs_show_verseno_title">Versnummer</string>
+  <string name="prefs_show_verseno_summary">Vis versnummer</string>
+  <string name="prefs_show_notes_title">Fotnoter og kryssreferanser</string>
+  <string name="prefs_show_notes_summary">Vis notater</string>
+  <string name="prefs_show_strongs_title">Vis Strongs ordbokstall</string>
+  <string name="prefs_show_strongs_summary">Peker til greske og hebraiske ordboksforklaringer</string>
+  <string name="prefs_night_mode_title">Nattmodus</string>
+  <string name="prefs_night_mode_summary">For enklere lesing i mørke</string>
+  <string name="prefs_text_size_title">Skriftstørrelse</string>
+  <string name="prefs_text_size_summary">Se mer eller se klarere</string>
+  <!-- Notes screen -->
+  <string name="no_chapter_notes">Ingen notater eksisterer for dette kapittelet.</string>
+  <string name="no_verse_notes">Ingen notat til dette verset</string>
+  <string name="previous">Tilbake</string>
+  <string name="next">Fram</string>
+  <!--  Strongs -->
+  <string name="strongs">Strongs ordbok</string>
+  <string name="strongs_not_installed">Vennligst last ned Strongs hebraiske og greske ordbøker</string>
+  <!-- Module download -->
+  <string name="download">Last ned moduler</string>
+  <string name="download_confirmation">Vil du laste ned bibler fra internett?</string>
+  <string name="download_source_message">Moduler blir lastet ned fra \nhttp://www.crosswire.org\nog http://xiphos.org</string>
+  <string name="download_document_confirm_prefix">"Last ned"</string>
+  <string name="error_downloading">En feil oppstod ved nedlasting. Vennligst sjekk din internettilkobling.</string>
+  <string name="no_internet_connection">Kunne ikke koble til internett</string>
+  <string name="wait_for_bible">Vennligst vent til bibelen er ferdig nedlastet, og du vil deretter bli tatt til hovedskjermen.</string>
+  <string name="wait_for_bible_not_yet">Vennligs vent. Bibelen er enda ikke ferdig installert.</string>
+  <string name="download_complete_no_bibles">Ingen bibler ble installert. Trykk tilbake og prøv igjen.</string>
+  <string name="too_many_jobs">For mange jobber utføres. Vennligst vent til noen er fullført før du prøver igjen.</string>
+  <!-- Context menus -->
+  <string name="delete">Slette</string>
+  <string name="about">Om</string>
+  <string name="notes">Notater og kryssreferanser</string>
+  <string name="copy">Kopiere dette verset</string>
+  <!-- Dictionary -->
+  <string name="dictionary">Ordbok</string>
+  <string name="search_dictionary_hint">Søk i ordbok</string>
+  <string name="dictionary_contents">Innhold</string>
+  <!-- Document types -->
+  <string name="doc_type_bible">Bibel</string>
+  <string name="doc_type_commentary">Kommentar</string>
+  <string name="doc_type_dictionary">Ordbok</string>
+  <string name="error_occurred">En feil har oppstått</string>
+  <string name="okay">OK</string>
+  <string name="cancel">Avbryt</string>
+  <string name="error">"Feil "</string>
+  <string name="more">Mer</string>
+  <string name="retry">Prøv igjen</string>
+  <string name="please_wait">Vennligst vent...</string>
+  <string name="tts_lang_not_available">Språket er ikke tilgjengelig.</string>
+  <string name="add_bookmark">Legg til bokmerke</string>
+  <string name="all">Alle</string>
+  <string name="all_greek_occurrences">Finn alle forekomster</string>
+  <string name="all_hebrew_occurrences">Finn alle forekomster</string>
+  <string name="app_name">And Bible</string>
+  <string name="assign_labels">Legg til i grupper</string>
+  <string name="bookmark_added">Bokmerke lagret</string>
+  <string name="bookmark_exists">Bokmerket finnes allerede</string>
+  <string name="bookmark_labels">Bokmerkegrupper</string>
+  <string name="bookmarks">Bokmerker</string>
+  <string name="choosePassageVerseName">Velg vers</string>
+  <string name="delete_index">Slett søkeregister</string>
+  <string name="delete_search_index_doc">Slett søkeregister for %s?</string>
+  <string name="doc_type_book">Bok</string>
+  <string name="error_key_not_in_document">Ikke funnet i modulen</string>
+  <string name="error_no_content">Ikke noe innhold i valgt vers</string>
+  <string name="error_page_too_large">Siden er for stor til å lastes</string>
+  <string name="general_book">Bok</string>
+  <string name="general_book_contents">Innhold</string>
+  <string name="help">Hjelp</string>
+  <string name="lang_default">Standard</string>
+  <string name="locale_change_warning">Applikasjonen vil omstarte for at det nye språket skal tre i kraft</string>
+  <string name="morph_robinson_not_installed">Vennligst last ned ordboken \'Robinson\'s Morphological Analysis Codes\'</string>
+  <string name="mynote">Mine notater</string>
+  <string name="mynote_add">Legg til i mine notater</string>
+  <string name="mynote_saved">Notater lagret</string>
+  <string name="mynote_view_edit">Mine notater</string>
+  <string name="mynotes">Mine notater</string>
+  <string name="new_label">Ny gruppe</string>
+  <string name="new_label_prompt">Gruppenavn</string>
+  <string name="no">Nei</string>
+  <string name="no_indexed_bible_with_strongs_ref">Du må laste ned en bibel som inneholder Strongs ordboknummer og laste ned søkeregisteret via Søk-funksjonen.</string>
+  <string name="one_chapter">%d kapittel</string>
+  <string name="one_page">%d side</string>
+  <string name="one_verse">%d vers</string>
+  <string name="prefs_interface_locale_summary">Velg ønsket språk for brukergrensesnittet</string>
+  <string name="prefs_interface_locale_title">Språk</string>
+  <string name="prefs_navigate_to_verse_summary">Velg vers (og kapittel) når du skal navigere til bibelvers</string>
+  <string name="prefs_navigate_to_verse_title">Naviger til vers</string>
+  <string name="prefs_red_letter_summary">Vis Jesu tale i rød skrift</string>
+  <string name="prefs_red_letter_title">Røde bokstaver</string>
+  <string name="prefs_section_title_summary">Vis ikke-kanoniske seksjonsoverskrifter</string>
+  <string name="prefs_section_title_title">Seksjonsoverskrifter</string>
+  <string name="prefs_show_morphology_summary">Vis \'Robinson\'s Greek morphology\'</string>
+  <string name="prefs_show_morphology_title">Vis morfologiske koder</string>
+  <string name="prefs_show_mynotes_summary">Vis ikon i vers du har laget notater</string>
+  <string name="prefs_show_mynotes_title">Vis notatikoner</string>
+  <string name="prefs_text_size_sample_text">Eksempeltekst</string>
+  <string name="prefs_verse_per_line_summary">Vis hvert bibelvers på egen linje</string>
+  <string name="prefs_verse_per_line_title">Ett vers per linje</string>
+  <string name="refresh_book_list">Oppfrisker listen over tilgjengelige moduler</string>
+  <string name="rest_of_book">Til slutten av boken</string>
+  <string name="rest_of_chapter">Til slutten av kapittelet</string>
+  <string name="save">Lagre</string>
+  <string name="search_results">Søketreff</string>
+  <string name="select_text">Marker tekst</string>
+  <string name="select_text_help">Dra over teksten for å merke.\nTrykk deretter på merket tekst for å kopiere.</string>
+  <string name="share_verse">Del dette verset...</string>
+  <string name="share_verse_subject">Et bibelvers har blitt delt med deg via And Bible</string>
+  <string name="some_chapters">%d kapitler</string>
+  <string name="some_pages">%d sider</string>
+  <string name="some_verses">%d vers</string>
+  <string name="speak_queue">Legg i kø</string>
+  <string name="speak_repeat">Repeter</string>
+  <string name="stop">Stopp</string>
+  <string name="storage_space_warning">Ikke nok lokal lagringsplass.</string>
+  <string name="strongs_toggle_button_off">nnnn</string>
+  <string name="strongs_toggle_button_on">nnnn</string>
 </resources>
