--- a/AndBible/res/values-nb/strings.xml
+++ b/AndBible/res/values-nb/strings.xml
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <resources>
   <string name="splash_top_text">"\n\"Da sa Gud, \'Bli lys!\' Og det ble lys.\"\n1. Mosebok 1, 3"</string>
-  <string name="help_text">Trykk meny-knappen for menyvalg.\n\nNavigering:\nFør fingeren til venstre for å se neste kapittel.\nFør fingeren til høyre for å gå tilbake ett kapittel.\nRull track-ballen til siden for å gå fram og tilbake ett kapittel.</string>
-  <string name="help_text_long"><b>Navigering</b>\nGå til neste eller forrige kapittel ved å benytte track-ball, navigasjonstaster eller ved å dra fingeren vannrett over skjermen.\nDobbeltrykk på skjermen slår av/på fullskjermmodus.\n\n<b>Meny</b>\nTrykk menyknappen for diverse gjøremål\n\nFor å laste ned flere moduler, trykk menyknappen-&gt;Mer-&gt;Last ned bibler\n\n<b>Høytlesing</b>\nTrykk lenge i bibelvisningen for å åpne menyen for gjeldende vers.\nTrykk lenge på en modul i modullisten for å slette den eller vise informasjon om den.\nTrykk lenge på tilbakeknappen for å vise historikken.</string>
+  <string name="help_text">"Trykk menyknappen for å vise tilgjengelige valg\n\nDu skifter til neste eller forrige kapittel ved å bruke rulleballen, retningsknappene eller ved å dra fingeren vannrett over skjermen"</string>
+  <string name="help_text_long">"<b>Navigering</b>\nDu skifter til neste eller forrige kapittel ved å bruke rulleballen, retningsknappene eller ved å dra fingeren vannrett over skjermen\nDobbeltrykk på skjermen å slå fullskjermmodus av/på.\n\n<b>Meny</b>\nTrykk menyknappen for å vise tilgjengelige valg\n\nFor å laste ned flere moduler, trykk menyknappen-&gt;Mer-&gt;Last ned bibler\n\n<b>Høytlesing</b>\nTrykk på høytlesing for å vise skjermbildet for å starte og stoppe høytlesing\n\n<b>Mine notater</b>\nNotater kan du legge til fra menyvalget Mine notater på menyen for bibelvers. En liste over eksisterende notater kan du vise fra hovedmenyen.\n\n<b>Bokmerker</b>\nDu kan legge til bokmerker fra menyen for bibelvers. Bokmerkehåndtereren åpner du fra hovedmenyen. Bokmerkehåndtereren lar deg gruppere bokmerker.\n\n<b>Søk</b>\nSøkefunksjonen lar deg bruke spesialtegn som *, ?, AND, OR, NOT (se \"Apache Lucene – Query Parser Syntax\" for flere detaljer).\n\n<b>Kontekstmenyer</b>\nTrykk lenge på et bibelvers for å vise tilgjengelige valg for valgte bibelvers.\nTrykk lenge på en modul i modullisten for å slette eller vise informasjon om den.\nTrykk lenge på tilbakeknappen for å vise historikk."</string>
   <string name="no_sdcard_error">Sett inn ett SD-kort og start And Bible på nytt.</string>
   <string name="version_text">Versjon %s</string>
   <!-- main menu -->
@@ -22,9 +22,9 @@
   <string name="index_not_available_for_download">Dette registeret er ikke tilgjengelig for nedlasting</string>
   <string name="index_create">Bygg lokalt</string>
   <string name="progress_status">Fremdrift</string>
-  <string name="task_kill_warning">Var klar over at Android kan avlutte disse tidkrevende jobbende hvis du skifter til en annen applikasjon før jobben er utført.</string>
+  <string name="task_kill_warning">Vær klar over at Android kan avlutte disse tidkrevende jobbende hvis du skifter til en annen applikasjon før jobben er utført.</string>
   <string name="no_tasks_running">Det er for tiden ingen jobber som utføres.</string>
-  <string name="delete_doc">Slett %s?</string>
+  <string name="delete_doc">Slette %s?</string>
   <!-- Search -->
   <string name="search_words_group_prompt">Type søk:</string>
   <string name="search_all_words">Alle ordene</string>
@@ -37,14 +37,14 @@
   <string name="search_new_testament">Det nye testamentet</string>
   <string name="search_old_testament">Det gamle testamentet</string>
   <string name="search_current_book">Gjeldene bok</string>
-  <string name="error_executing_search">Feil ved søk</string>
+  <string name="error_executing_search">Feil i søkestrengen</string>
   <!-- Preferences -->
   <string name="prefs_show_verseno_title">Versnummer</string>
   <string name="prefs_show_verseno_summary">Vis versnummer</string>
   <string name="prefs_show_notes_title">Fotnoter og kryssreferanser</string>
   <string name="prefs_show_notes_summary">Vis notater</string>
-  <string name="prefs_show_strongs_title">Vis Strongs ordbokstall</string>
-  <string name="prefs_show_strongs_summary">Peker til greske og hebraiske ordboksforklaringer</string>
+  <string name="prefs_show_strongs_title">Vis Strongs ordtall</string>
+  <string name="prefs_show_strongs_summary">Lenker til greske og hebraiske ordforklaringer</string>
   <string name="prefs_night_mode_title">Nattmodus</string>
   <string name="prefs_night_mode_summary">For enklere lesing i mørke</string>
   <string name="prefs_text_size_title">Skriftstørrelse</string>
@@ -69,10 +69,10 @@
   <string name="download_complete_no_bibles">Ingen bibler ble installert. Trykk tilbake og prøv igjen.</string>
   <string name="too_many_jobs">For mange jobber utføres. Vennligst vent til noen er fullført før du prøver igjen.</string>
   <!-- Context menus -->
-  <string name="delete">Slette</string>
+  <string name="delete">Slett</string>
   <string name="about">Om</string>
   <string name="notes">Notater og kryssreferanser</string>
-  <string name="copy">Kopiere dette verset</string>
+  <string name="copy">Kopier dette verset</string>
   <!-- Dictionary -->
   <string name="dictionary">Ordbok</string>
   <string name="search_dictionary_hint">Søk i ordbok</string>
@@ -91,8 +91,8 @@
   <string name="tts_lang_not_available">Språket er ikke tilgjengelig.</string>
   <string name="add_bookmark">Legg til bokmerke</string>
   <string name="all">Alle</string>
-  <string name="all_greek_occurrences">Finn alle forekomster</string>
-  <string name="all_hebrew_occurrences">Finn alle forekomster</string>
+  <string name="all_greek_occurrences">Finn alle forekomstene</string>
+  <string name="all_hebrew_occurrences">Finn alle forekomstene</string>
   <string name="app_name">And Bible</string>
   <string name="assign_labels">Legg til i grupper</string>
   <string name="bookmark_added">Bokmerke lagret</string>
@@ -101,11 +101,11 @@
   <string name="bookmarks">Bokmerker</string>
   <string name="choosePassageVerseName">Velg vers</string>
   <string name="delete_index">Slett søkeregister</string>
-  <string name="delete_search_index_doc">Slett søkeregister for %s?</string>
+  <string name="delete_search_index_doc">Slette søkeregister for %s?</string>
   <string name="doc_type_book">Bok</string>
   <string name="error_key_not_in_document">Ikke funnet i modulen</string>
-  <string name="error_no_content">Ikke noe innhold i valgt vers</string>
-  <string name="error_page_too_large">Siden er for stor til å lastes</string>
+  <string name="error_no_content">Ikke noe innhold i dette verset</string>
+  <string name="error_page_too_large">Siden er for stor til å laste inn</string>
   <string name="general_book">Bok</string>
   <string name="general_book_contents">Innhold</string>
   <string name="help">Hjelp</string>
@@ -126,15 +126,15 @@
   <string name="one_verse">%d vers</string>
   <string name="prefs_interface_locale_summary">Velg ønsket språk for brukergrensesnittet</string>
   <string name="prefs_interface_locale_title">Språk</string>
-  <string name="prefs_navigate_to_verse_summary">Velg vers (og kapittel) når du skal navigere til bibelvers</string>
+  <string name="prefs_navigate_to_verse_summary">Velg kapittel og vers når du skal navigere til et nytt bibelsted</string>
   <string name="prefs_navigate_to_verse_title">Naviger til vers</string>
   <string name="prefs_red_letter_summary">Vis Jesu tale i rød skrift</string>
-  <string name="prefs_red_letter_title">Røde bokstaver</string>
+  <string name="prefs_red_letter_title">Rød skrift</string>
   <string name="prefs_section_title_summary">Vis ikke-kanoniske seksjonsoverskrifter</string>
   <string name="prefs_section_title_title">Seksjonsoverskrifter</string>
   <string name="prefs_show_morphology_summary">Vis \'Robinson\'s Greek morphology\'</string>
   <string name="prefs_show_morphology_title">Vis morfologiske koder</string>
-  <string name="prefs_show_mynotes_summary">Vis ikon i vers du har laget notater</string>
+  <string name="prefs_show_mynotes_summary">Vis ikon i vers du har skrevet notater</string>
   <string name="prefs_show_mynotes_title">Vis notatikoner</string>
   <string name="prefs_text_size_sample_text">Eksempeltekst</string>
   <string name="prefs_verse_per_line_summary">Vis hvert bibelvers på egen linje</string>
